# math_training

./: .gitignore  CMakeLists.txt  PROJECT_COMPLETION_SUMMARY.md  README.md  getting_started.md  optimization_learning_plan.md  requirements.txt
constraint_programming/: 01_introduction_to_cp.md  02_sudoku_solver.py
cpp_implementations/calculus/: CMakeLists.txt  README.md  convexity.cpp  derivatives.cpp  gradients.cpp  lagrangian.cpp
cpp_implementations/constraint_programming/: CMakeLists.txt  README.md  constraint_satisfaction.cpp
cpp_implementations/integer_programming/: CMakeLists.txt  README.md  branch_and_bound.cpp
cpp_implementations/linear_algebra/: CMakeLists.txt  README.md  eigenvalues.cpp  linear_transformations.cpp  matrix_operations.cpp  vector_operations.cpp
cpp_implementations/metaheuristics/: CMakeLists.txt  README.md  simulated_annealing.cpp
cpp_implementations/network_flows/: CMakeLists.txt  README.md  max_flow.cpp
cpp_implementations/optimization/: CMakeLists.txt  README.md  constrained_optimization.cpp  linear_programming.cpp  metaheuristics.cpp  nonlinear_programming.cpp  unconstrained_optimization.cpp
cpp_implementations/probability/: CMakeLists.txt  README.md  monte_carlo.cpp  probability_distributions.cpp  random_variables.cpp  stochastic_processes.cpp
cpp_implementations/routing/: CMakeLists.txt  README.md  (+1 more)
examples/: README.md
integer_programming/: 01_introduction_to_ip.md  02_knapsack_problem.py
linear_programming/: 01_introduction_to_lp.md  02_simple_lp_example.py
routing/: 01_introduction_to_vrp.md  02_capacitated_vrp.py
(+5 files in other folders)
